RESOLVED FIXED145501
If a call has ever taken the virtual slow path, make sure that the DFG knows this
https://bugs.webkit.org/show_bug.cgi?id=145501
Summary If a call has ever taken the virtual slow path, make sure that the DFG knows ...
Filip Pizlo
Reported 2015-05-31 10:55:59 PDT
Remove another case of us pretending that a slow path doesn't happen if it didn't happen often enough.
Attachments
the patch (2.86 KB, patch)
2015-05-31 11:05 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2015-05-31 11:05:46 PDT
Created attachment 253981 [details] the patch
Geoffrey Garen
Comment 2 2015-06-01 16:04:07 PDT
Comment on attachment 253981 [details] the patch r=me
Filip Pizlo
Comment 3 2015-06-01 20:00:54 PDT
Note You need to log in before you can comment on or make changes to this bug.