If a call has ever taken the virtual slow path, make sure that the DFG knows this https://bugs.webkit.org/show_bug.cgi?id=145501

Reviewed by Geoffrey Garen.

Now now return higher fidelity information in the case of no polymorphic call stub. If the
virtual slow path was ever taken, we note this, and we note either zero or one call variant
based on the IC's last callee.

* bytecode/CallLinkStatus.cpp:
(JSC::CallLinkStatus::computeFromCallLinkInfo):
(JSC::CallLinkStatus::computeFor):



Canonical link: https://commits.webkit.org/163584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185099 268f45cc-cd09-0410-ab3c-d52691b4dbfc